# Heart-Disease-Prediction-Model

./: .gitignore  README.md  app.py  heart_disease_enriched.csv  main.py  pyproject.toml  requirements.txt
Machinelearning_code/: Heart_disease_model_train.ipynb  heart_disease_pipeline.pkl  heart_disease_rf_model.pkl  scaler.pkl  tuned_heart_disease_rf_model.pkl
testing/: new_model.py  test.py
